--- a/app/templates/add_task.html
+++ b/app/templates/add_task.html
@@ -9,7 +9,7 @@
     {{ form.task.label() }}
     {{ form.task(class = 'form-control', type="text") }}
   </div>
-  {{ form.submit(type="submit", class="btn btn-primary") }}
+    {{ form.submit(type="submit", class="btn btn-primary mt-3") }}
   </div>
 </form>
 
