--- a/app/templates/detailed_task.html
+++ b/app/templates/detailed_task.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
- {{ note }}
+
+<div class="text-center mt-5">
+  <h3>
+   {{ note[0] }}
+  </h3>
+</div>
+
 {% endblock %}
