--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css' ) }}">
     <title>{{ title }}</title>
 </head>
+
+
 <body>
 
 <nav class="navbar navbar-dark bg-dark p-3">
@@ -12,7 +15,7 @@
       <a href="{{ url_for('index') }}">Home</a>
       <a href="{{ url_for('login') }}">Login</a>
       <a href="{{ url_for('add_task') }}">Add task</a>
-      <a href="{{ url_for('detailed_task') }}">Detail task view</a>
+
       <a href="{{ url_for('logout') }}">Logout</a>
   </h1>
 </nav>
