--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,12 +3,13 @@
 {% block content %}
 
 <div class="container">
-    <h1>
-        {% for task in tasks %}
-                <li>
-                {{ task }}
-                </li>
-        {% endfor %}
-    </h1>
+    <ul>
+    {% for task in tasks %}
+        <li>
+            <h1><a class="text-decoration-none" href="{{ url_for('detailed_task', task_id=task[0])}}">{{ task[1] }}</a></h1>
+        </li>
+    {% endfor %}
+    </ul>
 </div>
+
 {% endblock %}
