--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <div class="container">
+
 <form class="form-signin p-3" method="POST">
     {{ form.hidden_tag() }}
 
@@ -13,13 +15,17 @@
     <br>
     {{ form.submit(type="submit", class="btn btn-primary") }}
 </form>
+
 </div>
+
 {% for message in get_flashed_messages() %}
+
+<script src="{{ url_for('static', filename='warning_login.js') }}"></script>
 <div class="alert alert-danger container" role="alert">
 <p class="text-center">{{ message }}</p>
 </div>
-{% endfor %}
 
+{% endfor %}
 
 
 {% endblock %}
